tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.error
compile: exit status 1
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:80:215: warning: multi-character character constant [-Wmultichar]
   80 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:80:251: warning: multi-character character constant [-Wmultichar]
   80 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp: In function ‘void send_file(const SocketMock&, const FileMock&)’:
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:246:17: error: binding reference of type ‘SocketMock&’ to ‘const SocketMock’ discards qualifiers
  246 |     socket_bind(sock);
      |                 ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:206:30: note:   initializing argument 1 of ‘void socket_bind(SocketMock&)’
  206 | void socket_bind(SocketMock& sock) {
      |                  ~~~~~~~~~~~~^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:247:19: error: binding reference of type ‘SocketMock&’ to ‘const SocketMock’ discards qualifiers
  247 |     socket_listen(sock);
      |                   ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:210:32: note:   initializing argument 1 of ‘void socket_listen(SocketMock&)’
  210 | void socket_listen(SocketMock& sock) {
      |                    ~~~~~~~~~~~~^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:248:35: error: binding reference of type ‘SocketMock&’ to ‘const SocketMock’ discards qualifiers
  248 |     ConnMock conn = socket_accept(sock);
      |                                   ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:214:36: note:   initializing argument 1 of ‘ConnMock socket_accept(SocketMock&)’
  214 | ConnMock socket_accept(SocketMock& sock) {
      |                        ~~~~~~~~~~~~^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:250:30: error: binding reference of type ‘FileMock&’ to ‘const FileMock’ discards qualifiers
  250 |     int64_t data = file_read(f, int64_t(1024));
      |                              ^
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:231:29: note:   initializing argument 1 of ‘int64_t file_read(FileMock&, int64_t)’
  231 | int64_t file_read(FileMock& f, int64_t size) {
      |                   ~~~~~~~~~~^
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:253:26: error: binding reference of type ‘FileMock&’ to ‘const FileMock’ discards qualifiers
  253 |         data = file_read(f, int64_t(1024));
      |                          ^
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:231:29: note:   initializing argument 1 of ‘int64_t file_read(FileMock&, int64_t)’
  231 | int64_t file_read(FileMock& f, int64_t size) {
      |                   ~~~~~~~~~~^
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:256:21: error: binding reference of type ‘SocketMock&’ to ‘const SocketMock’ discards qualifiers
  256 |     socket_shutdown(sock);
      |                     ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:219:34: note:   initializing argument 1 of ‘void socket_shutdown(SocketMock&)’
  219 | void socket_shutdown(SocketMock& sock) {
      |                      ~~~~~~~~~~~~^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:257:18: error: binding reference of type ‘SocketMock&’ to ‘const SocketMock’ discards qualifiers
  257 |     socket_close(sock);
      |                  ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/file_transfer/tests/test_send_file.cpp:223:31: note:   initializing argument 1 of ‘void socket_close(SocketMock&)’
  223 | void socket_close(SocketMock& sock) {
      |                   ~~~~~~~~~~~~^~~~
